added: functionality of adding,removing from playlist , likedSongs from certain fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:windowSoftInputMode="adjustNothing"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
